<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.views.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.views.WelcomeFragment"
        android:label="@string/welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.views.InstructionsFragment"
        android:label="@string/instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoesFragment"
            app:destination="@id/shoesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoesFragment"
        android:name="com.udacity.shoestore.views.shoes.ShoesFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_shoesFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.views.ShoeDetailFragment"
        android:label="ShoeDetailFragment" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesFragment"
            app:destination="@id/shoesFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/shoesFragment" />
    </fragment>
</navigation>