<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary"
        tools:context=".views.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_one_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_huge"
            android:layout_marginEnd="@dimen/margin_huge"
            android:text="@string/welcome_one"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/welcome_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_two_text"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_huge"
            android:layout_marginEnd="@dimen/margin_huge"
            android:text="@string/welcome_two"
            android:textAlignment="center"

            app:layout_constraintBottom_toTopOf="@id/instructions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_one_text" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_two_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>