<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
<!-- This is a complex view, justifying a constraintLayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary"
        tools:context="com.udacity.shoestore.views.LoginFragment">

        <TextView
            android:id="@+id/email_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@id/pw_label"
            app:layout_constraintEnd_toStartOf="@id/email_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/email_et"
            style="@style/edit_text_style"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@id/email_label"
            app:layout_constraintBottom_toBottomOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_label"
            app:layout_constraintTop_toTopOf="@id/email_label" />

        <TextView
            android:id="@+id/pw_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@id/buttons_flow"
            app:layout_constraintEnd_toStartOf="@id/pw_et"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <EditText
            android:id="@+id/pw_et"
            style="@style/edit_text_style"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@id/pw_label"
            app:layout_constraintBottom_toTopOf="@id/buttons_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pw_label"
            app:layout_constraintTop_toTopOf="@id/pw_label" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/buttons_flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="new_login_button, existing_login_button"
            app:flow_horizontalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pw_et" />

        <Button
            android:id="@+id/new_login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/existing_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/existing_login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_user"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/new_login_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
